--- a/conda_env.yml
+++ b/conda_env.yml
@@ -17,6 +17,8 @@ dependencies:
   - beautifulsoup4=4.13.3
   - bleach=6.2.0
   - bleach-with-css=6.2.0
+  - brotli=1.1.0
+  - brotli-bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
   - ca-certificates=2025.2.25
@@ -27,27 +29,34 @@ dependencies:
   - charset-normalizer=3.4.1
   - colorama=0.4.6
   - comm=0.2.2
+  - contourpy=1.3.1
   - cpython=3.11.11
+  - cycler=0.12.1
   - debugpy=1.8.13
   - decorator=5.2.1
   - defusedxml=0.7.1
   - exceptiongroup=1.2.2
+  - fonttools=4.57.0
   - fqdn=1.5.1
+  - freetype=2.13.3
   - h11=0.14.0
   - h2=4.2.0
   - hpack=4.1.0
   - httpcore=1.0.7
   - httpx=0.28.1
   - hyperframe=6.1.0
+  - icu=73.2
   - idna=3.10
   - importlib-metadata=8.6.1
   - importlib_resources=6.5.2
+  - intel-openmp=2024.2.1
   - ipykernel=6.29.5
   - ipython=9.0.2
   - ipython_pygments_lexers=1.1.1
   - isoduration=20.11.0
   - jedi=0.19.2
   - jinja2=3.1.6
+  - jpeg=9e
   - json5=0.12.0
   - jsonpointer=3.0.0
   - jsonschema=4.23.0
@@ -62,23 +71,51 @@ dependencies:
   - jupyterlab=4.4.0
   - jupyterlab_pygments=0.3.0
   - jupyterlab_server=2.27.3
+  - kiwisolver=1.4.7
   - krb5=1.21.3
+  - lcms2=2.16
+  - lerc=4.0.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.1.0
+  - libbrotlidec=1.1.0
+  - libbrotlienc=1.1.0
+  - libcblas=3.9.0
+  - libclang13=14.0.6
+  - libdeflate=1.22
   - libffi=3.4.4
+  - libhwloc=2.11.2
+  - libiconv=1.18
+  - liblapack=3.9.0
+  - libpng=1.6.39
+  - libpq=17.0
   - libsodium=1.0.20
+  - libtiff=4.5.1
+  - libwebp-base=1.5.0
+  - libwinpthread=12.0.0.r4.gg4f2fc60ca
+  - libxml2=2.13.5
+  - libxslt=1.1.41
+  - lz4-c=1.9.4
   - markupsafe=3.0.2
+  - matplotlib=3.10.1
+  - matplotlib-base=3.10.1
   - matplotlib-inline=0.1.7
+  - minizip=4.0.3
   - mistune=3.1.3
+  - mkl=2024.2.2
+  - munkres=1.1.4
   - nbclient=0.10.2
   - nbconvert-core=7.16.6
   - nbformat=5.10.4
   - nest-asyncio=1.6.0
   - notebook-shim=0.2.4
+  - openjpeg=2.5.2
   - openssl=3.4.1
   - overrides=7.7.0
   - packaging=24.2
   - pandocfilters=1.5.0
   - parso=0.8.4
   - pickleshare=0.7.5
+  - pillow=11.1.0
   - pip=25.0
   - pkgutil-resolve-name=1.3.10
   - platformdirs=4.3.7
@@ -88,9 +125,12 @@ dependencies:
   - pure_eval=0.2.3
   - pycparser=2.22
   - pygments=2.19.1
+  - pyparsing=3.2.3
+  - pyside6=6.7.2
   - pysocks=1.7.1
   - python=3.11.11
   - python-dateutil=2.9.0.post0
+  - python-dotenv=1.1.0
   - python-fastjsonschema=2.21.1
   - python-json-logger=2.0.7
   - python_abi=3.11
@@ -98,6 +138,15 @@ dependencies:
   - pywinpty=2.0.15
   - pyyaml=6.0.2
   - pyzmq=26.4.0
+  - qhull=2020.2
+  - qtbase=6.7.3
+  - qtdeclarative=6.7.3
+  - qtshadertools=6.7.3
+  - qtsvg=6.7.3
+  - qttools=6.7.3
+  - qtwebchannel=6.7.3
+  - qtwebengine=6.7.2
+  - qtwebsockets=6.7.3
   - referencing=0.36.2
   - requests=2.32.3
   - rfc3339-validator=0.1.4
@@ -110,6 +159,7 @@ dependencies:
   - soupsieve=2.5
   - sqlite=3.45.3
   - stack_data=0.6.3
+  - tbb=2021.13.0
   - terminado=0.18.1
   - tinycss2=1.4.0
   - tk=8.6.14
@@ -121,6 +171,7 @@ dependencies:
   - typing_extensions=4.13.1
   - typing_utils=0.1.0
   - ucrt=10.0.22621.0
+  - unicodedata2=16.0.0
   - uri-template=1.3.0
   - urllib3=2.3.0
   - vc=14.42
@@ -139,6 +190,7 @@ dependencies:
   - zipp=3.21.0
   - zlib=1.2.13
   - zstandard=0.23.0
+  - zstd=1.5.6
   - pip:
       - aenum==3.1.15
       - branca==0.8.1
@@ -156,7 +208,6 @@ dependencies:
       - numpy==1.26.4
       - oauthlib==3.2.2
       - pandas==2.2.3
-      - pillow==11.1.0
       - pyogrio==0.10.0
       - pyproj==3.7.1
       - pywin32==310
