test api google drive and start dashboard (constantes and data_loader)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ notebooks/.env
 anaconda_projects/
 .virtual_documents/
 .virtual_documents/
+notebooks/credentials.json
+notebooks/token.pickle
+dashboard/data/*.tif
