--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,55 @@
 affine==2.4.0
 attrs==25.3.0
+blinker==1.9.0
 certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 click-plugins==1.1.1
 cligj==0.7.2
 colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+dash==3.0.2
+dash-bootstrap-components==2.0.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash_daq==0.6.0
+dash_renderer==1.9.1
+Flask==3.0.3
+fonttools==4.57.0
+gunicorn==23.0.0
+idna==3.10
+importlib_metadata==8.6.1
 iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+mdurl==0.1.2
+narwhals==1.34.1
+nest-asyncio==1.6.0
 numpy==2.2.4
 packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+plotly==6.0.1
 pluggy==1.5.0
+Pygments==2.19.1
 pyparsing==3.2.3
 pytest==8.3.5
+pytest-rich==0.2.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
 rasterio==1.4.3
+requests==2.32.3
+retrying==1.3.4
+rich==14.0.0
+setuptools==78.1.0
+six==1.17.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+Werkzeug==3.0.6
+zipp==3.21.0
