--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@ dashboard/data/*.tif
 venv_env/
 **/__pycache__/
 **/.vscode/
-*csv
+*.csv
+*.tif
+dashboard/data/Data_hackathon_stat-20250412T210230Z-001/
