--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,83 @@
 affine==2.4.0
-alabaster==1.0.0
-altair==5.5.0
 annotated-types==0.7.0
-attrs==24.3.0
-babel==2.16.0
+attrs==25.3.0
 blinker==1.9.0
 boto3==1.37.33
 botocore==1.37.33
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
+cachelib==0.13.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 click-plugins==1.1.1
 cligj==0.7.2
 colorama==0.4.6
+colorcet==3.1.0
 contourpy==1.3.1
 cycler==0.12.1
 dash==3.0.2
-dash-bootstrap-components==2.0.0
+dash-bootstrap-components==2.0.1
+dash-core-components==2.0.0
+dash-extensions==2.0.3
+dash-html-components==2.0.0
+dash-leaflet==1.1.1
+dash-svg==0.0.12
 dash_daq==0.6.0
-docutils==0.21.2
+dash_renderer==1.9.1
+dataclass-wizard==0.35.0
+dotenv==0.9.9
+EditorConfig==0.17.0
 Flask==3.0.3
+Flask-Caching==2.3.1
 fonttools==4.57.0
-geojson==3.1.0
+geobuf==1.1.1
 geopandas==1.0.1
-gitdb==4.0.11
-GitPython==3.1.43
+gunicorn==23.0.0
 idna==3.10
-imagesize==1.4.1
 importlib_metadata==8.6.1
+iniconfig==2.1.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
+Jinja2==3.1.6
 jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
+jsbeautifier==1.15.4
 kiwisolver==1.4.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 mdurl==0.1.2
-narwhals==1.19.1
+more-itertools==10.6.0
+narwhals==1.34.1
 nest-asyncio==1.6.0
-numpy==1.26.4
+numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
-planetary-computer==1.0.0
 plotly==6.0.1
-protobuf==5.29.2
-pyarrow==18.1.0
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.18.0
+pluggy==1.5.0
+protobuf==3.20.0
+pydantic==2.11.3
+pydantic_core==2.33.1
+Pygments==2.19.1
 pyogrio==0.10.0
 pyparsing==3.2.3
-pyproj==3.7.0
-PySide6==6.8.0.2
-PySide6_Addons==6.8.0.2
-PySide6_Essentials==6.8.0.2
-pystac-client==0.8.6
+pyproj==3.7.1
+pytest==8.3.5
+pytest-rich==0.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-pytz==2024.2
+pytz==2025.2
+PyYAML==6.0.2
 rasterio==1.4.3
-referencing==0.35.1
 requests==2.32.3
 retrying==1.3.4
-rich==13.9.4
-rpds-py==0.22.3
+rich==14.0.0
 s3transfer==0.11.4
-scipy==1.15.2
-seaborn==0.13.2
 setuptools==78.1.0
-shapely==2.0.6
-shiboken6==6.8.0.2
+shapely==2.1.0
 six==1.17.0
-smmap==5.0.1
-snowballstemmer==2.2.0
-Sphinx==8.1.3
-sphinx-rtd-theme==3.0.2
-sphinxcontrib-applehelp==2.0.0
-sphinxcontrib-devhelp==2.0.0
-sphinxcontrib-htmlhelp==2.1.0
-sphinxcontrib-jquery==4.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==2.0.0
-sphinxcontrib-serializinghtml==2.0.0
-streamlit==1.41.1
-tenacity==9.0.0
-toml==0.10.2
-tornado==6.4.2
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-watchdog==6.0.0
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
 Werkzeug==3.0.6
 zipp==3.21.0
