--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ dotenv==0.9.9
 Flask==3.0.3
 fonttools==4.57.0
 geopandas==1.0.1
+gunicorn==23.0.0
 idna==3.10
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
